--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -29,11 +29,67 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
+        <!-- Timeblocks go here -->
+        <div id="9" class="time-block row">  
+            <div class="col-md-1 hour" >9:00 AM</div>
+            <textarea id= "text9" class="description col-md-10"></textarea>
+            <button class="saveBtn col-md-1"><i class="fa-solid fa-floppy-disk"></i></button>
+        </div>
+        <div id="10" class="time-block row">  
+          <div class="col-md-1 hour" >10:00 AM</div>
+          <textarea id= "text10" class="description col-md-10"></textarea>
+          <button class="saveBtn col-md-1"><i class="fa-solid fa-floppy-disk"></i></button>
+        </div>
+        <div id="11" class="time-block row">  
+          <div class="col-md-1 hour">11:00 AM</div>
+          <textarea id= "text11" class="description col-md-10"></textarea>
+          <button class="saveBtn col-md-1"><i class="fa-solid fa-floppy-disk"></i></button>
+        </div>
+        <div id="12" class="time-block row">  
+          <div class="col-md-1 hour" >12:00 AM</div>
+          <textarea id= "text12" class="description col-md-10"></textarea>
+          <button class="saveBtn col-md-1"><i class="fa-solid fa-floppy-disk"></i></button>
+        </div>
+        <div id="1" class="time-block row">  
+          <div class="col-md-1 hour" >1:00 PM</div>
+          <textarea id= "text1" class="description col-md-10"></textarea>
+          <button class="saveBtn col-md-1"><i class="fa-solid fa-floppy-disk"></i></button>
+        </div>
+        <div id="2" class="time-block row">  
+          <div class="col-md-1 hour" >2:00 PM</div>
+          <textarea id= "text2" class="description col-md-10"></textarea>
+          <button class="saveBtn col-md-1"><i class="fa-solid fa-floppy-disk"></i></button>
+        </div>
+        <div id="3" class="time-block row">  
+          <div class="col-md-1 hour" >3:00 PM</div>
+          <textarea id= "text3" class="description col-md-10"></textarea>
+          <button class="saveBtn col-md-1"><i class="fa-solid fa-floppy-disk"></i></button>
+        </div>
+        <div id="4" class="time-block row">  
+          <div class="col-md-1 hour" >4:00 PM</div>
+          <textarea id= "text4" class="description col-md-10"></textarea>
+          <button class="saveBtn col-md-1"><i class="fa-solid fa-floppy-disk"></i></button>
+        </div>
+        <div id="5" class="time-block row">  
+          <div class="col-md-1 hour" >5:00 PM</div>
+          <textarea id= "text5" class="description col-md-10"></textarea>
+          <button class="saveBtn col-md-1"><i class="fa-solid fa-floppy-disk"></i></button>
+        </div>
     </div>
-
+    <script src="./assets/js/script.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   </body>
 </html>
 
+ <!-- <ul class="time_inputs">
+                <li> 9:00 AM<input type="text" class="text" value=""></br></li> -->
+                <!-- <li>10:00 AM<input type="text" class="text" value=""></br></li>
+                <li>11:00 AM<input type="text" class="text" value=""></br></li>
+                <li> 12:00 AM<input type="text" class="text" value=""></br></li>
+                <li>1:00 PM<input type="text" class="text" value=""></br></li>
+                <li> 2:00 PM<input type="text" class="text" value=""></br></li>
+                <li> 3:00 PM<input type="text" class="text" value=""></br></li>
+                <li> 4:00 PM<input type="text" class="text" value=""></br></li>
+                <li> 5:00 PM<input type="text" class="text" value=""></br></li>
+            </ul> -->
