--- a/index.html
+++ b/index.html
@@ -30,47 +30,47 @@
     </header>
     <div class="container">
         <!-- Timeblocks go here -->
-        <div id="9" class="time-block row">  
+        <div id="nine" class="time-block row">  
             <div class="col-md-1 hour" >9:00 AM</div>
             <textarea id= "text9" class="description col-md-10"></textarea>
             <button class="saveBtn col-md-1"><i class="fa-solid fa-floppy-disk"></i></button>
         </div>
-        <div id="10" class="time-block row">  
+        <div id="ten" class="time-block row">  
           <div class="col-md-1 hour" >10:00 AM</div>
           <textarea id= "text10" class="description col-md-10"></textarea>
           <button class="saveBtn col-md-1"><i class="fa-solid fa-floppy-disk"></i></button>
         </div>
-        <div id="11" class="time-block row">  
+        <div id="eleven" class="time-block row">  
           <div class="col-md-1 hour">11:00 AM</div>
           <textarea id= "text11" class="description col-md-10"></textarea>
           <button class="saveBtn col-md-1"><i class="fa-solid fa-floppy-disk"></i></button>
         </div>
-        <div id="12" class="time-block row">  
+        <div id="twelve" class="time-block row">  
           <div class="col-md-1 hour" >12:00 AM</div>
           <textarea id= "text12" class="description col-md-10"></textarea>
           <button class="saveBtn col-md-1"><i class="fa-solid fa-floppy-disk"></i></button>
         </div>
-        <div id="1" class="time-block row">  
+        <div id="one" class="time-block row">  
           <div class="col-md-1 hour" >1:00 PM</div>
           <textarea id= "text1" class="description col-md-10"></textarea>
           <button class="saveBtn col-md-1"><i class="fa-solid fa-floppy-disk"></i></button>
         </div>
-        <div id="2" class="time-block row">  
+        <div id="two" class="time-block row">  
           <div class="col-md-1 hour" >2:00 PM</div>
           <textarea id= "text2" class="description col-md-10"></textarea>
           <button class="saveBtn col-md-1"><i class="fa-solid fa-floppy-disk"></i></button>
         </div>
-        <div id="3" class="time-block row">  
+        <div id="three" class="time-block row">  
           <div class="col-md-1 hour" >3:00 PM</div>
           <textarea id= "text3" class="description col-md-10"></textarea>
           <button class="saveBtn col-md-1"><i class="fa-solid fa-floppy-disk"></i></button>
         </div>
-        <div id="4" class="time-block row">  
+        <div id="four" class="time-block row">  
           <div class="col-md-1 hour" >4:00 PM</div>
           <textarea id= "text4" class="description col-md-10"></textarea>
           <button class="saveBtn col-md-1"><i class="fa-solid fa-floppy-disk"></i></button>
         </div>
-        <div id="5" class="time-block row">  
+        <div id="five" class="time-block row">  
           <div class="col-md-1 hour" >5:00 PM</div>
           <textarea id= "text5" class="description col-md-10"></textarea>
           <button class="saveBtn col-md-1"><i class="fa-solid fa-floppy-disk"></i></button>
